--- a/ExtensionTrackerScan/src/index.html
+++ b/ExtensionTrackerScan/src/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        width: 1000px;
+        height: 600px;
+        overflow: hidden;
+      }
+    </style>
     <meta charset="utf-8" />
     <title>ExtensionTrackerScan</title>
     <base href="/" />
