Angular reloading working

--- a/ExtensionTrackerScan/src/index.html
+++ b/ExtensionTrackerScan/src/index.html
@@ -5,8 +5,9 @@
       body {
         margin: 0;
         padding: 0;
-        width: 1000px;
-        height: 600px;
+        width: 750px;
+        height: 1000px;
+        min-height: 300px;
         overflow: hidden;
       }
     </style>
